[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "nunitius"
version = "0.1.0"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0"
fern = "0.6.0"
jsonl = "4.0"
log = "0.4.0"
serde = {version = "1.0", features = ["derive"]}

[dependencies.flume]
default_features = false
features = ["select"]
version = "0.10.3"
