[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "nunitius"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.19", features = ["serde"]}
crossterm = "0.19.0"
fern = "0.6.0"
jsonl = "4.0"
log = "0.4.0"
serde = {version = "1.0", features = ["derive"]}

[dependencies.flume]
default_features = false
features = ["select"]
version = "0.10.3"

[dev-dependencies]
once_cell = "1.7"
