[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
name = "nunitius-server"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
flume = {version = "0.10.5", default_features = false}
jsonl = "4.0"
model = {path = "../../libs/model"}
parking_lot = "0.11.1"
server-core = {path = "../server-core"}
server-protocol = {path = "../../libs/server-protocol"}
